register to Default env

--- a/etc/autoregister.properties
+++ b/etc/autoregister.properties
@@ -1,3 +1,4 @@
 agent.auto.register.key=1234567890
 agent.auto.register.resources=ant,java
-agent.auto.register.environments=PROD
+agent.auto.register.environments=Default
+agent.auto.register.hostname=LocalAgent
