--- a/etc/autoregister.properties
+++ b/etc/autoregister.properties
@@ -1,4 +1,4 @@
 agent.auto.register.key=1234567890
-agent.auto.register.resources=ant,java
+agent.auto.register.resources=docker,java
 agent.auto.register.environments=Default
 agent.auto.register.hostname=LocalAgent
